# ChangeLog for net-irc/konversation
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-irc/konversation/ChangeLog,v 1.88 2009/10/18 19:23:29 ssuominen Exp $

  18 Oct 2009; Samuli Suominen <ssuominen@gentoo.org>
  konversation-1.2.ebuild:
  amd64 stable wrt #289627

*konversation-1.2 (09 Oct 2009)

  09 Oct 2009; Tomáš Chvátal <scarabeus@gentoo.org>
  -files/1.2_rc1-debug.patch, -konversation-1.2_rc1-r1.ebuild,
  +konversation-1.2.ebuild:
  Remove old. Version bump to 1.2 Final.

*konversation-1.2_rc1-r1 (07 Oct 2009)

  07 Oct 2009; Tomáš Chvátal <scarabeus@gentoo.org>
  +files/1.2_rc1-debug.patch, -files/konversation-1.0.1-crash.patch,
  -files/konversation-1.0.1-konsolepanel.patch,
  -files/konversation-1.0.1-media-script-vulnerability.patch,
  -files/konversation-1.0.1-serverlist-compiz-workaround.patch,
  -files/konversation-1.1-desktop-entry-fix.diff,
  -konversation-1.2_alpha6.ebuild, -konversation-1.2_beta1.ebuild,
  -konversation-1.2_rc1.ebuild, +konversation-1.2_rc1-r1.ebuild:
  Cleanup and apply patch for debug build as recommended by upstream.

*konversation-1.2_rc1 (04 Oct 2009)

  04 Oct 2009; Alex Alexander <wired@gentoo.org>
  +konversation-1.2_rc1.ebuild:
  version bump

*konversation-1.2_beta1 (21 Sep 2009)

  21 Sep 2009; Tomáš Chvátal <scarabeus@gentoo.org>
  -konversation-1.2_alpha5.ebuild, +konversation-1.2_beta1.ebuild:
  Version bump. Remove old.

*konversation-1.2_alpha6 (09 Aug 2009)

  09 Aug 2009; Alex Alexander <wired@gentoo.org>
  -konversation-1.2_alpha4.ebuild, +konversation-1.2_alpha6.ebuild:
  version bump, removed alpha4

*konversation-1.2_alpha5 (05 Aug 2009)

  05 Aug 2009; Alex Alexander <wired@gentoo.org>
  +konversation-1.2_alpha5.ebuild:
  version bump

*konversation-1.2_alpha4 (04 Jul 2009)

  04 Jul 2009; Tomáš Chvátal <scarabeus@gentoo.org>
  -konversation-1.2_alpha3.ebuild, +konversation-1.2_alpha4.ebuild:
  Version bump per bug #276416. Remove old.
