@@ -1,6 +1,12 @@
 # ChangeLog for net-irc/konversation
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-irc/konversation/ChangeLog,v 1.88 2009/10/18 19:23:29 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-irc/konversation/ChangeLog,v 1.89 2009/11/12 07:29:10 scarabeus Exp $
+
+*konversation-1.2.1 (12 Nov 2009)
+
+  12 Nov 2009; Tomáš Chvátal <scarabeus@gentoo.org>
+  +konversation-1.2.1.ebuild:
+  Version bump.
 
   18 Oct 2009; Samuli Suominen <ssuominen@gentoo.org>
   konversation-1.2.ebuild:
